Correção Categoria Enchente, adição CSS

--- a/codigo/public/vinicius_goncalves/index.html
+++ b/codigo/public/vinicius_goncalves/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Radar Urbano - Cadastro de Denúncia</title>
+  <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
 
@@ -20,7 +21,7 @@
     <select id="categoria" name="categoria" required>
       <option value="">Selecione</option>
       <option value="buraco">Buraco</option>
-      <option value="enchente">Esgoto</option>
+      <option value="enchente">Enchente</option>
       <option value="sinalizacao">Sinalização</option>
       <option value="iluminacao">Iluminação</option>
       <option value="esgoto">Esgoto</option>
