style: aplicação de layout fluido com responsividade mobile e adaptação proporcional em tela cheia

--- a/codigo/public/vinicius_goncalves/index.html
+++ b/codigo/public/vinicius_goncalves/index.html
@@ -36,9 +36,11 @@
 
     <label for="descricao">Descrição</label><br>
     <textarea id="descricao" name="descricao" required></textarea><br><br>
-
-    <button type="reset">Cancelar</button>
-    <button type="submit">Enviar</button>
+    
+    <div class="buttons">
+      <button type="reset">Cancelar</button>
+      <button type="submit">Enviar</button>
+    </div>
 
   </form>
 
