--- a/codigo/public/arthur/index.html
+++ b/codigo/public/arthur/index.html
@@ -3,44 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atualizar Denúncia</title>
+    <title>Atualizar Denúncia - Rachadura</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    </head>
 <body>
+    <header>
+        <img src="perfil-icon.png" alt="Perfil" class="icone">
+        <h1 class="titulo-header">Rachadura</h1>
+        <img src="menu-icon.png" alt="Menu" class="icone">
+    </header>
 
-    <div class="container">
-        <h1>Atualizar Denúncia</h1>
+    <main>
+        <div class="cartao">
+            <p class="titulo-cartao">Atualizar Denúncia</p>
 
-        <div class="media-controls">
-            <button id="btn-add-image">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-image" viewBox="0 0 16 16">
-                    <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-                    <path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
-                  </svg>
-                 Adicionar Imagem
-            </button>
-            <button id="btn-add-video">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-film" viewBox="0 0 16 16">
-                    <path d="M0 1a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V1zm4 0v6h8V1H4zm8 8H4v6h8V9zM1 1v2h2V1H1zm2 3H1v2h2V4zm-2 3H1v2h2V7zm2 3H1v2h2v-2zm-2 3H1v2h2v-2zM15 1h-2v2h2V1zm-2 3h2v2h-2V4zm2 3h-2v2h2V7zm-2 3h2v2h-2v-2zm2 3h-2v2h2v-2z"/>
-                  </svg>
-                Adicionar Vídeo
-            </button>
-            <input type="file" id="image-input" accept="image/*" style="display: none;">
-            <input type="file" id="video-input" accept="video/*" style="display: none;">
+            <div class="media-controls">
+                <button id="btn-add-image" class="botao-icone">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-image" viewBox="0 0 16 16">
+                        <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+                        <path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
+                    </svg>
+                    Adicionar Imagem
+                </button>
+                <button id="btn-add-video" class="botao-icone">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-film" viewBox="0 0 16 16">
+                        <path d="M0 1a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V1zm4 0v6h8V1H4zm8 8H4v6h8V9zM1 1v2h2V1H1zm2 3H1v2h2V4zm-2 3H1v2h2V7zm2 3H1v2h2v-2zm-2 3H1v2h2v-2zM15 1h-2v2h2V1zm-2 3h2v2h-2V4zm2 3h-2v2h2V7zm-2 3h2v2h-2v-2zm2 3h-2v2h2v-2z"/>
+                    </svg>
+                    Adicionar Vídeo
+                </button>
+                <input type="file" id="image-input" accept="image/*" style="display: none;">
+                <input type="file" id="video-input" accept="video/*" style="display: none;">
+            </div>
+
+            <div class="text-area-container">
+                <textarea id="update-description" class="input" placeholder="Descreva a atualização..."></textarea>
+            </div>
+
+            <div class="bottom-controls">
+                <button id="btn-back" class="botao btn-secondary">Voltar</button>
+                <button id="btn-save" class="botao btn-primary">Salvar Atualização</button>
+            </div>
         </div>
+    </main>
 
-        <div class="text-area-container">
-            <textarea id="update-description" placeholder="Descreva a atualização..."></textarea>
-        </div>
-
-        <div class="bottom-controls">
-            <button id="btn-back" class="btn-secondary">Voltar</button>
-            <button id="btn-save" class="btn-primary">Salvar Atualização</button>
-        </div>
-
-    </div>
+    <footer>
+        <img src="mapa-icon.png" alt="Mapa" class="icone">
+        <img src="favoritos-icon.png" alt="Favoritos" class="icone">
+        <img src="perfil-icon.png" alt="Perfil" class="icone">
+    </footer>
 
     <script src="script.js" defer></script>
-
-</body>
+    </body>
 </html>
