--- a/codigo/public/vinicius_goncalves/index.html
+++ b/codigo/public/vinicius_goncalves/index.html
@@ -5,7 +5,7 @@
   <title>Radar Urbano - Cadastro de Denúncia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="public\css\style.css">
 </head>
 <body>
 
@@ -86,7 +86,7 @@
 
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="js/app.js"></script>
+  <script src="public/js/app.js"></script>
 
 </body>
 </html>
