Versão final sprint 1-HTML

--- a/codigo/public/arthur/atualizar_denuncia.html
+++ b/codigo/public/arthur/atualizar_denuncia.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atualizar Denúncia - Rachadura</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Detalhes da Denúncia</title> <link rel="stylesheet" href="style.css">
     </head>
 <body>
     <header>
         <img src="perfil-icon.png" alt="Perfil" class="icone">
-        <h1 class="titulo-header">Rachadura</h1>
-        <img src="menu-icon.png" alt="Menu" class="icone">
+        <h1 class="titulo-header" id="header-title">Detalhes da Denúncia</h1> <img src="menu-icon.png" alt="Menu" class="icone">
     </header>
 
     <main>
         <div class="cartao">
-            <p class="titulo-cartao">Atualizar Denúncia</p>
+            <p class="titulo-cartao" id="cartao-title">Carregando...</p> <div class="form-group">
+                <label for="denuncia-titulo-input" class="label-input">Título da Denúncia:</label>
+                <input type="text" id="denuncia-titulo-input" class="input" placeholder="Ex: Buraco na Rua Principal">
+            </div>
 
             <div class="media-controls">
                 <button id="btn-add-image" class="botao-icone">
@@ -34,15 +35,19 @@
                 <input type="file" id="image-input" accept="image/*" style="display: none;">
                 <input type="file" id="video-input" accept="video/*" style="display: none;">
             </div>
+            <div id="selected-files-info" class="selected-files-info">
+                 </div>
 
-            <div class="text-area-container">
-                <textarea id="update-description" class="input" placeholder="Descreva a atualização..."></textarea>
+
+            <div class="text-area-container form-group">
+                <label for="update-description" class="label-input">Descrição da Denúncia:</label>
+                <textarea id="update-description" class="input" placeholder="Descreva o problema urbano..."></textarea>
             </div>
 
             <div class="bottom-controls">
                 <button id="btn-back" class="botao btn-secondary">Voltar</button>
-                <button id="btn-save" class="botao btn-primary">Salvar Atualização</button>
-            </div>
+                <button id="btn-save" class="botao btn-primary">Salvar Denúncia</button>
+                <button id="btn-delete" class="botao btn-danger" style="display: none;">Excluir Denúncia</button> </div>
         </div>
     </main>
 
