--- a/codigo/public/victor/index.html
+++ b/codigo/public/victor/index.html
@@ -9,13 +9,45 @@
 </head>
 
 <body>
-    <div class="filtros">
-        <input type="CATEGORIA DA DENÚNCIA:" placeholder="CATEGORIA DE DENÚNCIA">
-        <input type="STATUS:" placeholder="STATUS">
-        <input type="date" name="DATA INICIAL" placeholder="DATA INICIAL">
-        <input type="date" name="DATA FINAL" placeholder="DATA FINAL">
-        <button><b>FILTRAR</b></button>
+    <header>
+        <img src="perfil-icon.png" alt="Perfil" class="icone">
+        <h1 class="titulo">Rachadura</h1>
+        <img src="menu-icon.png" alt="Menu" class="icone">
+    </header>
+
+    <div class="container">
+        <div class="filtros">
+            <p><b>FILTRAR DENÚNCIA</b></p>
+            <select id="categoria-denuncia" class="seletor-categoria" required>
+                <option value="" disabled selected>CATEGORIA DE DENÚNCIA</option>
+                <option value="buraco">BURACOS NA RUA</option>
+                <option value="iluminacao">ILUMINAÇÃO QUEIMADA OU AUSENTE</option>
+                <option value="sinalizacao">SINALIZAÇÃO DE TRÂNSITO DANIFICADA OU AUSENTE</option>
+                <option value="semaforo">SEMÁFORO COM DEFEITO</option>
+                <option value="calcada">CALÇADAS DANIFICADAS</option>
+                <option value="acessibilidade">FALTA DE ACESSIBILIDADE</option>
+                <option value="lixo">ENTULHO OU LIXO EM VIA PÚBLICA</option>
+                <option value="esgoto">ESGOTO A CÉU ABERTO</option>
+                <option value="drenagem">ÁGUA EMPOÇADA / DRENAGEM RUIM</option>
+                <option value="arvore">ÁRVORE CAÍDA</option>
+                <option value="poste">POSTE OU FIAÇÃO EXPOSTA</option>
+                <option value="obra">OBRA IRREGULAR</option>
+                <option value="vazamento">VAZAMENTO DE ÁGUA</option>
+                <option value="alagamento">VIAS ALAGADAS</option>
+            </select>
+           <input type="date" id="data-inicial" name="DATA INICIAL" placeholder="DATA INICIAL">
+            <button id="filtrarBtn"><b>FILTRAR</b></button>
+        </div>
     </div>
+    
+    
+    <footer>
+        <img src="mapa-icon.png" alt="Mapa" class="icone">
+        <img src="favoritos-icon.png" alt="Favoritos" class="icone">
+        <img src="perfil-icon.png" alt="Perfil" class="icone">
+    </footer>
+    <div id="resultadoDenuncias"></div>
+
+    <script src="script.js"></script>
 </body>
 
-</html>
