--- a/codigo/public/pedro_augusto/FAC/index.html
+++ b/codigo/public/pedro_augusto/FAC/index.html
@@ -17,15 +17,20 @@
             <input type="text" id="searchInput" class="input" placeholder="Pesquise sua pergunta...">
             <button id="searchButton" class="botao">Pesquisar</button>
         </div>
+        
+        <div class="faq-section-title">
+            <h2 class="titulo">Perguntas Mais Frequentes</h2>
+        </div>
 
         <div id="faq-container" class="faq-container">
             </div>
+
+        <button id="loadMoreButton" class="botao full-width-button" style="display: none;">Ver Todas as Perguntas</button>
     </main>
 
     <footer>
         <p>&copy; 2025 Seu Site. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="faq.js"></script>
-</body>
+    <script src="faq.js"></script> </body>
 </html>
