--- a/codigo/public/pedro_augusto/FAC/index.html
+++ b/codigo/public/pedro_augusto/FAC/index.html
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Seu Site. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Seu Site. Todos os direitos reservados 25.</p>
     </footer>
 
     <script src="faq.js"></script> </body>
