--- a/codigo/public/victor_noticias/index.html
+++ b/codigo/public/victor_noticias/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Portal de Notícias</title>
 </head>
 <body>
   <h1>Últimas Notícias</h1>
 
+  <select id="categoria" onchange="buscarVideosPorCategoria()">
+    <option value="">Selecione uma categoria</option>
+    <option value="enchente">Enchente</option>
+    <option value="apagão">Falta de energia</option>
+    <option value="desabamento">Desabamento</option>
+  </select>
+
   <div id="player"></div>
 
-  <button onclick="trocarVideo('dQw4w9WgXcQ')">Vídeo 1 - Enchente</button>
-  <button onclick="trocarVideo('M7lc1UVf-VE')">Vídeo 2 - Falta de energia</button>
-  <button onclick="trocarVideo('e-ORhEE9VVg')">Vídeo 3 - Desabamento</button>
+  <div id="botoes-videos"></div>
 
-  
   <script src="https://www.youtube.com/iframe_api"></script>
-
-
-  <script src="script.js"></script>
+  <script src="noticias.js"></script>
 </body>
 </html>
