--- a/codigo/public/lucasm/index.html
+++ b/codigo/public/lucasm/index.html
@@ -7,7 +7,6 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
-  
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -19,52 +18,52 @@
         <div class="row">
           <div class="col-md-6 mb-3">
             <label for="nome" class="form-label">Nome</label>
-            <input type="text" class="form-control" id="nome" name="nome" required />
+            <input type="text" class="form-control" id="nome" required />
           </div>
           <div class="col-md-6 mb-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" name="email" required />
+            <input type="email" class="form-control" id="email" required />
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-4 mb-3">
             <label for="telefone" class="form-label">Telefone</label>
-            <input type="text" class="form-control" id="telefone" name="telefone" required />
+            <input type="text" class="form-control" id="telefone" required />
           </div>
           <div class="col-md-4 mb-3">
             <label for="cpf" class="form-label">CPF</label>
-            <input type="text" class="form-control" id="cpf" name="cpf" required />
+            <input type="text" class="form-control" id="cpf" required />
           </div>
           <div class="col-md-4 mb-3">
             <label for="data-nascimento" class="form-label">Data de Nascimento</label>
-            <input type="date" class="form-control" id="data-nascimento" name="data-nascimento" required />
+            <input type="date" class="form-control" id="data-nascimento" required />
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-6 mb-3">
             <label for="rua" class="form-label">Rua</label>
-            <input type="text" class="form-control" id="rua" name="rua" required />
+            <input type="text" class="form-control" id="rua" required />
           </div>
           <div class="col-md-6 mb-3">
             <label for="bairro" class="form-label">Bairro</label>
-            <input type="text" class="form-control" id="bairro" name="bairro" required />
+            <input type="text" class="form-control" id="bairro" required />
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-4 mb-3">
             <label for="cep" class="form-label">CEP</label>
-            <input type="text" class="form-control" id="cep" name="cep" required />
+            <input type="text" class="form-control" id="cep" required />
           </div>
           <div class="col-md-4 mb-3">
             <label for="numero" class="form-label">Número</label>
-            <input type="text" class="form-control" id="numero" name="numero" required />
+            <input type="text" class="form-control" id="numero" required />
           </div>
           <div class="col-md-4 mb-3">
             <label for="complemento" class="form-label">Complemento</label>
-            <input type="text" class="form-control" id="complemento" name="complemento" />
+            <input type="text" class="form-control" id="complemento" />
           </div>
         </div>
 
@@ -74,6 +73,45 @@
   </main>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/imask/6.4.2/imask.min.js"></script>
-  <script src="app.js"></script>
+  <script>
+    const cpfInput = document.getElementById('cpf');
+    const telefoneInput = document.getElementById('telefone');
+    const cepInput = document.getElementById('cep');
+
+    IMask(cpfInput, { mask: '000.000.000-00' });
+    IMask(telefoneInput, { mask: '(00) 00000-0000' });
+    IMask(cepInput, { mask: '00000-000' });
+
+    const form = document.getElementById('cadastro-form');
+
+    form.addEventListener('submit', async function (e) {
+      e.preventDefault();
+
+      const dados = {
+        nome: document.getElementById('nome').value,
+        email: document.getElementById('email').value,
+        telefone: telefoneInput.value,
+        cpf: cpfInput.value,
+        nascimento: document.getElementById('data-nascimento').value,
+        rua: document.getElementById('rua').value,
+        bairro: document.getElementById('bairro').value,
+        cep: cepInput.value,
+        numero: document.getElementById('numero').value,
+        complemento: document.getElementById('complemento').value
+      };
+
+      try {
+        await fetch('http://localhost:3000/usuarios', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(dados)
+        });
+        alert('Usuário cadastrado com sucesso!');
+        form.reset();
+      } catch (error) {
+        alert('Erro ao cadastrar usuário');
+      }
+    });
+  </script>
 </body>
 </html>
